Fixed slideshow issue on mobile and some aligning centre stuff.

--- a/sass/templates/_exhibition-single.scss
+++ b/sass/templates/_exhibition-single.scss
@@ -37,6 +37,10 @@
 .exhibition-slideshow {
  	padding-bottom: $base-spacing-unit;	
  	background: white;
+
+  @include respond-to(mobile) { 
+    @include gs-span(m, all);
+    }
 }
 
 .exhibition-title { 
@@ -45,6 +49,7 @@
 
   @include respond-to(mobile) { 
      padding-top: $half-spacing-unit;
+     text-align: center;
     }
 }
 
@@ -82,6 +87,10 @@
 .artist-list {
 	@include column-count(3);	
 	padding-bottom: $base-spacing-unit;
+
+    @include respond-to(mobile) { 
+    @include column-count(2); 
+    }
 }
 
 .related-posts {
