--- a/sass/templates/_news-single.scss
+++ b/sass/templates/_news-single.scss
@@ -6,11 +6,20 @@
   @include gs-span(da, 2, 4, (2, 5));
   clear:both;
 
+    @include respond-to(mobile) { 
+    	@include gs-span(m, all);
+    	clear:both;
+    }
+
 }
 
 .news-entry {
   	@include gs-pad (da, padinfull);
   	padding-bottom: $base-spacing-unit;	
+
+  	@include respond-to(mobile) { 
+     @include gs-pad (m, padinfull);
+    }
 
 }
 
