--- a/sass/templates/_royalslider.scss
+++ b/sass/templates/_royalslider.scss
@@ -13,7 +13,7 @@
 .royalSlider > * {
 	float: left;
 }
-.royalSlider img {  margin: 0; padding: 0; border: 0; box-shadow: none; border-radius: 0; max-width: none; }
+.royalSlider img {  margin: 0; padding: 0; border: 0; box-shadow: none; border-radius: 0; max-width: 100%; }
 
 .rsWebkit3d .rsSlide,
 .rsWebkit3d .rsContainer,
